# apohara-vouch

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  THREAT_MODEL.md  ac-measurements.json  deny.toml  fly.toml  package.json  vercel.json
.claude/rules/: performance.md  security.md
.github/workflows/: ci.yml  codeql.yml  publish-npm.yml  publish.yml  release.yml  scorecard.yml
crates/themis-agents/: Cargo.toml
crates/themis-agents/src/: audit_watchdog.rs  baaar.rs  decision.rs  demo_narrator.rs  extractor.rs  fraud_auditor.rs  gaap_classifier.rs  lib.rs  llm.rs  po_matcher.rs  provenance_signer.rs  regression_tester.rs  traits.rs
crates/themis-band-client/: Cargo.toml  agents.yaml
crates/themis-band-client/src/: client.rs  error.rs  fleet.rs  lib.rs  python_bridge.rs  socket.rs  types.rs  ws.rs
crates/themis-band-client/tests/: band_hello_world.rs
crates/themis-compliance/: Cargo.toml
crates/themis-compliance/src/: aibom.rs  aiml_metrics.rs  dora.rs  eu_ai_act.rs  featherless_metrics.rs  framework.rs  fria.rs  iso_23894.rs  iso_42001.rs  iso_5469.rs  lib.rs  nist_ai_rmf.rs  owasp_agentic.rs  qms.rs  service.rs
crates/themis-compliance/tests/: compliance_dashboard.rs  iso_reports.rs  regulatory_completion.rs
crates/themis-compressor/: Cargo.toml
crates/themis-compressor/src/: classifier.rs  coordinator.rs  lib.rs  variant.rs
crates/themis-evidence/: Cargo.toml  build.rs
crates/themis-evidence/src/: chain.rs  lib.rs  packet.rs  persistence.rs  rekor.rs  rekor_v2.rs  sealchain_wrap.rs  signer.rs  timestamp.rs
crates/themis-evidence/tests/: iso_42001.rs  rekor_v2_real_signature_round_trip.rs  retention.rs  timestamp_real_verify.rs  verify_5_invoices.rs  verify_binary.rs
crates/themis-evidence/tests/fixtures/: freetsa_sample.tsr
crates/themis-frontend/src/: art50_banner.rs  lib.rs
crates/themis-frontend/static/: app.css  app.js  index.html  tokens.css
crates/themis-orchestrator/: Cargo.toml  routing.toml
crates/themis-orchestrator/src/: art50.rs  baaar_z3.rs  band_live.rs  circuit_breaker.rs  concurrency.rs  dual_llm.rs  events.rs  fixtures.rs  http.rs  isolation.rs  jcr_gate.rs  keyring.rs  kill_switch.rs  lib.rs  llm_backend.rs  orchestrator.rs  packet.rs  pdf.rs  prefix_salt.rs  retry.rs  room.rs  router.rs  routing.rs  routing_config.rs  sandbox.rs  state.rs  tenants.rs  test_support.rs
crates/themis-orchestrator/src/featherless_openclaw/: mod.rs
crates/themis-orchestrator/src/pdf/: baaar.rs  ctx.rs  mod.rs  page1_summary.rs  page2_audit.rs  stakeholders.rs
crates/themis-orchestrator/tests/: a2a_discovery.rs  aiml_50_real_e2e.rs  art50_compliance.rs  baaar_z3_1210.rs  band_cross_account_chaos.rs  circuit_breaker.rs  demo_data_loads.rs  dual_llm.rs  featherless_50_real_e2e.rs  http_e2e.rs  invoicenet_50_bench.rs  judge_pov_e2e.rs  keyring.rs  pdf_halt_visual.rs  public_bench.rs  sandbox_enforcement.rs  sealchain_wrap_e2e.rs  sealed_packet_rekor.rs  snapshot_compliance.rs
crates/vouch-agents/: pyproject.toml
crates/vouch-agents/fixtures/: eu_directive_2014_24.txt  procurement_clean.json  procurement_violations.json  vendor_profile.json  vendor_profile_alt.json
crates/vouch-agents/src/: approval_manager.py  compliance_fallback.py  compliance_veto.py  evidence_clerk.py  finance_risk.py  intake.py  legal_policy.py  llm_secrets.py  orchestrator.py  red_team.py  vendor_researcher.py
crates/vouch-agents/tests/: test_approval_manager.py  test_compliance_fallback_chaos.py  test_compliance_veto.py  test_evidence_clerk.py  test_finance_risk.py  test_intake.py  test_legal_policy.py  test_red_team.py  test_vendor_researcher.py
crates/vouch-aibom/: Cargo.toml
crates/vouch-aibom/src/: lib.rs
crates/vouch-aibom/tests/: cyclonedx_schema.rs
crates/vouch-chain/: Cargo.toml
crates/vouch-chain/src/: lib.rs
crates/vouch-chain/tests/: chain_proptest.rs
crates/vouch-compliance/: Cargo.toml
crates/vouch-compliance/src/: lib.rs
crates/vouch-compliance/tests/: dora_mapping.rs  eu_ai_act_mapping.rs  nist_ai_rmf_mapping.rs  owasp_agentic_mapping.rs
crates/vouch-evidence/: Cargo.toml
crates/vouch-evidence/src/: lib.rs  packet.rs  signer.rs
crates/vouch-evidence/tests/: signer_proptest.rs
crates/vouch-frontend/src/: cost_calculator.rs  cost_log_schema.rs  evidence_cache.rs  lib.rs  main.rs  sse.rs
crates/vouch-frontend/tests/: cost_drift.rs  cost_log_schema.rs  e2e_cold_start.rs  sse_stream.rs
crates/vouch-gate/: Cargo.toml
crates/vouch-gate/src/: lib.rs
crates/vouch-gate/tests/: baaar_proptest.rs
crates/vouch-orchestrator/: Cargo.toml
crates/vouch-orchestrator/src/: http.rs  lib.rs
crates/vouch-orchestrator/tests/: rfc3161_chain.rs  seal_http_schema.rs
crates/vouch-receipt/: Cargo.toml
crates/vouch-receipt/src/: lib.rs  packet.rs
crates/vouch-receipt/tests/: art12_coverage.rs  c2pa_ci.rs
docs/: COMPLIANCE-FINAL.md  JUDGE-QUICKSTART.md  PROMPT-FRONTEND-AGENT.md  REFERENCES.md  SPEC.md  aibom.md  build-slides.sh  cross-prize-narrative.md  slides.md  submission-final.md  submission-text.md  submission.md  threat-model.md  vertical-pivot-eval.md  video-script.md  video-v4-script.md
docs/adr/: 0010-rekor-v2-client.md
docs/audit/: aiml_real_bench_output.txt  chaos_harness_output.txt  code_modularity_pass.md
fixtures/: sample_packet.json
scripts/: apohara_init.sh  build_pitch_deck.py  check-no-apohara.sh  judge_demo.sh  measure_acs.sh  themis-bootstrap.py
