[package]
name = "themis-agents"
# US-B3b: bumped from workspace 0.1.0 -> 0.2.0 because we added
# `AgentError::AuthenticationError` (a new public variant on a
# `#[non_exhaustive]` enum — still technically a minor bump since
# downstream exhaustive matches can now encounter it).
version = "0.2.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS 5 core + 3 shadow agents. Agent trait + LlmBackend trait + BAAAR kill-switch. Multi-tenant via ProvenanceSigner."

[dependencies]
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
base64 = "0.22"
hex = "0.4"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
tokio = { version = "1.40", features = ["time"] }
themis-compressor = { path = "../themis-compressor" }

[dev-dependencies]
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "sync", "net", "io-util"] }
wiremock = "=0.6.2"
