[package]
name = "themis-compliance"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS compliance — DORA, EU AI Act, NIST AI RMF, OWASP Agentic 2026 mappers on the Evidence Packet. Closes AC8 + AC15."

[lib]
name = "themis_compliance"
path = "src/lib.rs"

[dependencies]
themis-agents = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
blake3 = "1"
thiserror = "2"
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
proptest = "1"
