[package]
name = "themis-evidence"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS Evidence Packet — Ed25519 signing, BLAKE3 hash chain, RFC 3161 timestamp. Multi-tenant key isolation (chmod 600)."

[lib]
name = "themis_evidence"
path = "src/lib.rs"

[[bin]]
name = "themis-verify"
path = "src/bin/verify.rs"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core"] }
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
hex = "0.4"
thiserror = "2"
uuid = { version = "1", features = ["v4", "serde"] }
rand = "0.8"
async-trait = "0.1"
base64 = "0.22"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "time", "process"] }
sigstore-verify = "0.8"
sigstore-trust-root = "0.8"
sigstore-types = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde_json_canonicalizer = "0.3"
# Rekor v2 gRPC stack (ADR 0010). Pinned to 0.14 for tonic/prost to
# match the current stable on crates.io as of 2026-06-17. The
# `transport` feature pulls in HTTP/2 connector + TLS roots;
# `tonic-prost` is the runtime codec crate the generated client
# references (`tonic_prost::ProstCodec`).
tonic = { version = "0.14", features = ["transport"] }
tonic-prost = "0.14"
prost = "0.14"
prost-types = "0.14"

[build-dependencies]
# tonic-prost-build 0.14 is the tonic 0.14 build helper (the
# configure() API moved out of tonic-build in 0.14; tonic-build
# 0.14 is now the manual-codegen crate only).
tonic-prost-build = "0.14"

[dev-dependencies]
tempfile = "3"
