[package]
name = "themis-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS orchestrator — state machine, Band room lifecycle, LlmBackend router, BAAAR kill-switch, Evidence Packet assembly, multi-tenant registry."

[dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
blake3 = "1"
hex = "0.4"
themis-agents = { workspace = true }
themis-evidence = { workspace = true }
themis-compliance = { workspace = true }
themis-frontend = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
hyper = "1"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true }

[[bin]]
name = "themis-orchestrator"
path = "src/lib.rs"

[[bin]]
name = "themis-bench"
path = "src/bin/bench.rs"
