[package]
name = "themis-orchestrator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "THEMIS orchestrator — state machine, Band room lifecycle, LlmBackend router, BAAAR kill-switch, Evidence Packet assembly, multi-tenant registry."

[dependencies]
tokio = { workspace = true }
sha2 = { workspace = true }
async-trait = "0.1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dashmap = "6"
uuid = { version = "1", features = ["v4", "v5", "serde"] }
blake3 = "1"
hex = "0.4"
themis-agents = { workspace = true }
themis-evidence = { workspace = true }
themis-compliance = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
themis-frontend = { workspace = true }
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "limit"] }
hyper = "1"
base64 = "0.22"
tokio-stream = { version = "0.1", features = ["sync"] }
printpdf = "0.7"
qrcode = "0.14"

[dev-dependencies]
tokio = { workspace = true }
proptest = "1"
wiremock = "=0.6.2"

[features]
# `bench` enables test_support for the bench binary and the
# demo_data_loads integration test. It's a default feature so
# `cargo test -p themis-orchestrator` Just Works without having
# to remember `--features bench`; the bench binary is gated by
# `required-features = ["bench"]` below.
default = ["bench"]
bench = []

[[bin]]
name = "themis-bench"
path = "src/bin/bench.rs"
required-features = ["bench"]

[[bin]]
name = "themis-orchestrator"
path = "src/bin/themis-orchestrator.rs"
