[project]
name = "vouch-agents"
version = "0.1.0"
description = "S-01: Apohara VOUCH orchestrator agent (Band + AI/ML API + LangGraph state machine)."
requires-python = ">=3.11,<3.14"
license = { text = "MIT" }
authors = [
    { name = "Pablo M. Suarez", email = "suarezpm@csnat.unt.edu.ar" },
]
readme = "README.md"

# S-01: the Orchestrator runs in the themis-band-client subprocess
# harness (already wired to `band-sdk[langgraph]`). It depends on:
#   - band-sdk       : agent + LangGraph integration + thenvoi_* tools
#   - langgraph      : the 9-state state machine
#   - langchain-openai: AI/ML API client (OpenAI-compatible base_url)
#   - openai         : typed chat completions
#   - python-dotenv  : secrets.env loader (no secrets in source — AC-1.7)
#   - httpx          : POST /seal client (S-03 evidence layer)
#   - pytest         : AC-1.6 mock test
#   - pytest-asyncio : async test support
dependencies = [
    "band-sdk[langgraph]>=0.2.11",
    "langgraph>=0.2,<1.0",
    "langchain-openai>=0.2,<1.0",
    "openai>=1.40,<2.0",
    "python-dotenv>=1.0,<2.0",
    "httpx>=0.27,<1.0",
    "pydantic>=2.6,<3.0",
    "crewai>=1.14,<2.0",
    "litellm>=1.80,<2.0",
    # S-05: Finance risk analyst uses Pydantic AI for structured output
    # (RiskScore) against claude-sonnet-4-6 via AI/ML API.
    "pydantic-ai>=1.0,<2.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    # S-05: property-based test for monotonicity (AC-5.3).
    "hypothesis>=6.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"
# Chaos tests for the cross-account Compliance Veto fallback run
# 10 deterministic scenarios; CI runs them as a separate job so
# a regression on the chaos invariant doesn't hide a regression
# on the 181-test agent suite (and vice versa). Run locally:
#   uv run pytest -m chaos          # only chaos tests
#   uv run pytest -m "not chaos"    # only agent tests
markers = [
    "chaos: cross-account Compliance Veto fallback (AC-7b.5)",
]  # noqa: ERA001

# S-01 AC matrix (verified by the ralph verification log under
# /home/thelinconx/.omc/state/sessions/vouch-pivot-016EF520/verification-log/S-01-AC-*.txt)
