[package]
name = "vouch-chain"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "VOUCH BLAKE3 hash chain — append-only tamper-evident ledger"

[dependencies]
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1"
