[package]
name = "vouch-compliance"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "VOUCH compliance mappers — DORA, EU AI Act, NIST AI RMF, OWASP Agentic 2026"

[dependencies]
themis-compliance = { path = "../themis-compliance" }
themis-agents = { path = "../themis-agents" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
