[package]
name = "vouch-evidence"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "VOUCH evidence layer — Ed25519 signer + RFC 3161 timestamp + Rekor v2"

[dependencies]
themis-evidence = { path = "../themis-evidence" }
ed25519-dalek = "2"
blake3 = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
