[package]
name = "vouch-receipt"
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["Pablo M. Suarez <suarezpm@csnat.unt.edu.ar>"]
description = "VOUCH evidence receipt — EU AI Act Art. 12 8-field coverage + C2PA PDF"

[dependencies]
vouch-evidence = { path = "../vouch-evidence" }
vouch-chain = { path = "../vouch-chain" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", default-features = false, features = ["serde", "clock"] }
blake3 = "1"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
